# ConvertorTLV

./: CMakeLists.txt  README.md
CMake/: Utils.cmake
JsonToTLV/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp  some.json
TLV/: CMakeLists.txt  TLVObject.cpp  TLVObject.h
Tests/: CMakeLists.txt  Test_TLV.cpp
